--- a/balance1.yml
+++ b/balance1.yml
@@ -3,7 +3,7 @@
   Method:POST;saveBalance;saveBalanceRequest&{id=String,name=String};saveBalanceResponse&{balance=String,name=String};fallbackmathodrequired=Y
   Method:GET;getBalance1;getBalanceRequest1&{id=String};getBalanceResponse1&{balance=String};fallbackmathodrequired=N
   Method:POST;saveBalance1;saveBalanceRequest1&{id=String,name=String};saveBalanceResponse1&{balance=String,name=String};fallbackmathodrequired=Y
-  crudrequired:Y'
+  crudrequired:N'
   
   
   
