--- a/usage1.yml
+++ b/usage1.yml
@@ -1,4 +1,4 @@
 'name:Usage
   Method:GET;getUsage;getUsageRequest&{id=String};getUsageResponse&{usage=String};fallbackmathodrequired=Y
   Method:POST;saveUsage;saveUsageRequest&{id=String,name=String};saveUsageResponse&{usage=String,name=String};fallbackmathodrequired=N  
-  crudrequired:Y'
+  crudrequired:N'
