--- a/balance1.yml
+++ b/balance1.yml
@@ -1,9 +1,9 @@
 'name:balance
   Method:GET;getBalance;getBalanceRequest&{id=String};getBalanceResponse&{balance=String};fallbackmathodrequired=Y
   Method:POST;saveBalance;saveBalanceRequest&{id=String,name=String};saveBalanceResponse&{balance=String,name=String};fallbackmathodrequired=Y
-  Method:GET;getBalance1;getBalanceRequest1&{id=String};getBalanceResponse1&{balance=String};fallbackmathodrequired=N
+  Method:GET;getBalance1;getBalanceRequest1&{id=String};getBalanceResponse1&{balance=String};fallbackmathodrequired=Y
   Method:POST;saveBalance1;saveBalanceRequest1&{id=String,name=String};saveBalanceResponse1&{balance=String,name=String};fallbackmathodrequired=Y
-  crudrequired:N'
+  crudrequired:Y'
   
   
   
