--- a/order.yml
+++ b/order.yml
@@ -1,5 +1,5 @@
 'name:order
-  METHOD:GET;getOrder;getBalanceRequest&{id=String};getBalanceResponse&{balance=String};fallbackmathodrequired=Y;crudrequired=Y
-  METHOD:POST;saveOrder;saveBalanceRequest&{id=String,name=String};saveBalanceResponse&{balance=String,name=String};fallbackmathodrequired=Y;crudrequired=Y
-  METHOD:GET;getOrder1;getBalanceRequest1&{id=String};getBalanceResponse1&{balance=String};fallbackmathodrequired=Y;crudrequired=Y
-  METHOD:POST;saveOrder1;saveBalanceRequest1&{id=String,name=String};saveBalanceResponse1&{balance=String,name=String};fallbackmathodrequired=Y;crudrequired=Y'
+  METHOD:GET;getOrder;getOrderRequest&{id=String};getOrderResponse&{balance=String};fallbackmathodrequired=Y;crudrequired=Y
+  METHOD:POST;saveOrder;saveOrderRequest&{id=String,name=String};saveOrderResponse&{balance=String,name=String};fallbackmathodrequired=Y;crudrequired=Y
+  METHOD:GET;getOrder1;getOrderRequest1&{id=String};getOrderResponse1&{balance=String};fallbackmathodrequired=Y;crudrequired=Y
+  METHOD:POST;saveOrder1;saveOrderRequest1&{id=String,name=String};saveOrderResponse1&{balance=String,name=String};fallbackmathodrequired=Y;crudrequired=Y'
