--- a/balance/Dockerfile
+++ b/balance/Dockerfile
@@ -1,6 +1,6 @@
 FROM java:8-alpine
-VOLUME /template_app
-ADD /target/XtemplateX_app.jar app.jar
+VOLUME /balance
+ADD /target/balance-0.0.1-SNAPSHOT.jar app.jar
 RUN sh -c 'touch app.jar'
-EXPOSE template_port
+EXPOSE 8270
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-Dspring.profiles.active=docker","-jar","/app.jar"]
