--- a/balance/src/main/resources/bootstrap.properties
+++ b/balance/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
-server.port= template_port
-spring.application.name= template_name
+server.port= 8270
+spring.application.name= balance
 spring.cloud.config.failFast=true
 eureka.client.service-url.defaultZone= ${EUREKA_URL}
 eureka.client.registryFetchIntervalSeconds= 5
