--- a/order/src/main/resources/bootstrap.properties
+++ b/order/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
-server.port= 8440
-spring.application.name= balance
+server.port= 8450
+spring.application.name= order
 spring.cloud.config.failFast=true
 eureka.client.service-url.defaultZone= ${EUREKA_URL}
 eureka.client.registryFetchIntervalSeconds= 5
