--- a/order/service.yml
+++ b/order/service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: usage
+  name: order
   labels:
-    app: usage
+    app: order
 spec:
   type: NodePort
   ports:
-  - port: 8460
+  - port: 8450
     protocol: TCP
   selector:
-    app: usage
+    app: order
