--- a/order/templatedeployment.yaml
+++ b/order/templatedeployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: extensions/v1beta1
 kind: Deployment           
 metadata:
-  name: usage                          
+  name: templatename                          
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: usage                      
+        app: templatename                      
     spec:
       containers:                       
-      - name: usage                     
-        image: debajyotim/usage             
+      - name: templatename                     
+        image: templateimage             
         ports:
-        - containerPort: 8460           
+        - containerPort: templateport           
         env:
         - name: EUREKA_URL
           value: "http://eureka:admin@eureka-server:8761/eureka"
